--- a/testProjecten/gui/Menu/Menu.csproj
+++ b/testProjecten/gui/Menu/Menu.csproj
@@ -79,7 +79,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scenes\ArgameButton.cs" />
+    <Compile Include="Assets\Scenes\ContactButtonController.cs" />
+    <Compile Include="Assets\Scenes\ContactUsController.cs" />
+    <Compile Include="Assets\Scenes\LocateMeButtonController.cs" />
+    <Compile Include="Assets\Scenes\LokaalReservatieButtonController.cs" />
+    <Compile Include="Assets\Scenes\MijnLessenroosterController.cs" />
+    <Compile Include="Assets\Scenes\NavigateButtonController.cs" />
+    <Compile Include="Assets\Scenes\SettingsButtonController.cs" />
+    <Compile Include="Assets\Scenes\SettingsController.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
