--- a/testProjecten/gui/Menu/Menu.csproj
+++ b/testProjecten/gui/Menu/Menu.csproj
@@ -14,7 +14,6 @@
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
     <CompilerResponseFile></CompilerResponseFile>
-    <UnityProjectGenerator>VSTU</UnityProjectGenerator>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>StandaloneWindows64:19</UnityBuildTarget>
     <UnityVersion>5.6.6f2</UnityVersion>
@@ -82,6 +81,7 @@
     <Compile Include="Assets\Scenes\ContactButtonController.cs" />
     <Compile Include="Assets\Scenes\ContactUsController.cs" />
     <Compile Include="Assets\Scenes\LocateMeButtonController.cs" />
+    <Compile Include="Assets\Scenes\Login.cs" />
     <Compile Include="Assets\Scenes\LokaalReservatieButtonController.cs" />
     <Compile Include="Assets\Scenes\MijnLessenroosterController.cs" />
     <Compile Include="Assets\Scenes\NavigateButtonController.cs" />
