--- a/testProjecten/gui/Menu/Menu.csproj
+++ b/testProjecten/gui/Menu/Menu.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Assets\Scenes\LocateMeButtonController.cs" />
     <Compile Include="Assets\Scenes\Login.cs" />
     <Compile Include="Assets\Scenes\LokaalReservatieButtonController.cs" />
+    <Compile Include="Assets\Scenes\Mail.cs" />
     <Compile Include="Assets\Scenes\MijnLessenroosterController.cs" />
     <Compile Include="Assets\Scenes\NavigateButtonController.cs" />
     <Compile Include="Assets\Scenes\SettingsButtonController.cs" />
