--- a/testProjecten/gui/Menu/Menu.csproj
+++ b/testProjecten/gui/Menu/Menu.csproj
@@ -78,6 +78,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\BackController.cs" />
+    <Compile Include="Assets\Scenes\BackController.cs" />
     <Compile Include="Assets\Scenes\ContactButtonController.cs" />
     <Compile Include="Assets\Scenes\ContactUsController.cs" />
     <Compile Include="Assets\Scenes\IcalController.cs" />
